[Editorial] Correct mismatched dashes

--- a/src/epub/text/introduction-1.xhtml
+++ b/src/epub/text/introduction-1.xhtml
@@ -22,7 +22,7 @@
 					<p>U-te⁠—a Norwegian princess, wife of Sigeband.</p>
 				</li>
 				<li>
-					<p>Hagen⁠—son of Sigeband and the second U-te, and grandfather of Gu-drun.</p>
+					<p>Hagen⁠—son of Sigeband and the second U-te, and grandfather of Gudrun.</p>
 				</li>
 				<li>
 					<p>Hilda⁠—a princess of India, wife of Hagen.</p>
@@ -31,10 +31,10 @@
 					<p>Hilda⁠—daughter of Hagen, wife of Hettel.</p>
 				</li>
 				<li>
-					<p>Hettel⁠—king of the Hegelings, husband of Hilda, and father of Gu-drun and Ortwin.</p>
+					<p>Hettel⁠—king of the Hegelings, husband of Hilda, and father of Gudrun and Ortwin.</p>
 				</li>
 				<li>
-					<p>Gu-drun⁠—daughter of Hettel and Hilda.</p>
+					<p>Gudrun⁠—daughter of Hettel and Hilda.</p>
 				</li>
 				<li>
 					<p>Ortwin⁠—prince of Ortland, son of Hettel and Hilda.</p>
@@ -61,22 +61,22 @@
 					<p>Gerlind⁠—wife of Ludwig.</p>
 				</li>
 				<li>
-					<p>Hartmut⁠—son of Ludwig and Gerlind, a suitor for Gu-drun.</p>
+					<p>Hartmut⁠—son of Ludwig and Gerlind, a suitor for Gudrun.</p>
 				</li>
 				<li>
 					<p>Ortrun⁠—daughter of Ludwig and Gerlind.</p>
 				</li>
 				<li>
-					<p>Siegfried⁠—king of Moorland, a suitor for Gu-drun.</p>
+					<p>Siegfried⁠—king of Moorland, a suitor for Gudrun.</p>
 				</li>
 				<li>
-					<p>Herwic⁠—king of Sealand, betrothed to Gu-drun.</p>
+					<p>Herwic⁠—king of Sealand, betrothed to Gudrun.</p>
 				</li>
 				<li>
-					<p>Hildeburg⁠—maiden companion of Gu-drun.</p>
+					<p>Hildeburg⁠—maiden companion of Gudrun.</p>
 				</li>
 				<li>
-					<p>Hergart⁠—maiden companion of Gu-drun.</p>
+					<p>Hergart⁠—maiden companion of Gudrun.</p>
 				</li>
 			</ul>
 		</section>
