--- a/src/epub/text/introduction-2.xhtml
+++ b/src/epub/text/introduction-2.xhtml
@@ -64,7 +64,7 @@
 					<p>Ireland⁠—The situation seems sometimes to correspond with the modern Ireland, and sometimes to a part of Holland. There is a place in Texel, at the present day, named Eijerland.</p>
 				</li>
 				<li>
-					<p>Iserland⁠—the home of one of Gu-drun’s maiden companions.</p>
+					<p>Iserland⁠—the home of one of Gudrun’s maiden companions.</p>
 				</li>
 				<li>
 					<p>Kampalia⁠—a fabulous land noted for rich clothing.</p>
