--- a/src/epub/text/tale-1.xhtml
+++ b/src/epub/text/tale-1.xhtml
@@ -990,7 +990,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>The good-will of the master</span>
+					<span>The goodwill of the master</span>
 					<span>to all well-known had been;</span>
 				</span>
 				<br/>
