--- a/src/epub/text/tale-10.xhtml
+++ b/src/epub/text/tale-10.xhtml
@@ -15,7 +15,7 @@
 					</h2>
 					<p epub:type="title">How Hartmut Sent to Woo Gudrun</p>
 				</hgroup>
-				<p epub:type="bridgehead">Hartmut, a Norman prince, son of Ludwig and Gerlind, hears of the beauty of Gu-drun, and resolves to woo her. Messengers are dispatched with letters, but receive a forbidding answer.</p>
+				<p epub:type="bridgehead">Hartmut, a Norman prince, son of Ludwig and Gerlind, hears of the beauty of Gudrun, and resolves to woo her. Messengers are dispatched with letters, but receive a forbidding answer.</p>
 			</header>
 			<p>
 				<span>
@@ -30,7 +30,7 @@
 				<br/>
 				<span>
 					<span>Than was King Hettel’s daughter,</span>
-					<span>Gu-drun, the high-born lady.</span>
+					<span>Gudrun, the high-born lady.</span>
 				</span>
 				<br/>
 				<span>
@@ -140,7 +140,7 @@
 				<br/>
 				<span>
 					<span>They, too, must learn the roadways</span>
-					<span>that towards the home of fair Gu-drun are leading.”</span>
+					<span>that towards the home of fair Gudrun are leading.”</span>
 				</span>
 			</p>
 			<p>
@@ -596,7 +596,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Is the maid, Gu-drun, as lovely</span>
+					<span>Is the maid, Gudrun, as lovely</span>
 					<span>as men have here been saying?</span>
 				</span>
 				<br/>
