--- a/src/epub/text/tale-11.xhtml
+++ b/src/epub/text/tale-11.xhtml
@@ -15,7 +15,7 @@
 					</h2>
 					<p epub:type="title">How Herwic Sent to Seek Gudrun and How Hartmut Came Himself</p>
 				</hgroup>
-				<p epub:type="bridgehead">Herwic, king of Sealand, sends suitors for the hand of Gu-drun, who are also rejected. Hartmut of Normandy comes to woo her in person, and is kindly received by her; she, however, begs him, if he values his life, to leave the court. He returns to Normandy, resolved to win her by force.</p>
+				<p epub:type="bridgehead">Herwic, king of Sealand, sends suitors for the hand of Gudrun, who are also rejected. Hartmut of Normandy comes to woo her in person, and is kindly received by her; she, however, begs him, if he values his life, to leave the court. He returns to Normandy, resolved to win her by force.</p>
 			</header>
 			<p>
 				<span>
@@ -172,7 +172,7 @@
 				<br/>
 				<span>
 					<span>There oft were stolen glances</span>
-					<span>between Gu-drun and the knight.</span>
+					<span>between Gudrun and the knight.</span>
 				</span>
 				<br/>
 				<span>
