--- a/src/epub/text/tale-12.xhtml
+++ b/src/epub/text/tale-12.xhtml
@@ -15,7 +15,7 @@
 					</h2>
 					<p epub:type="title">How Herwic Made War on Hettel, and How Gudrun Was Betrothed to Him</p>
 				</hgroup>
-				<p epub:type="bridgehead">Herwic, being forbidden by Hettel to woo his daughter, invades his kingdom, and, after a battle, Gu-drun, with Hettel’s consent, is betrothed to him.</p>
+				<p epub:type="bridgehead">Herwic, being forbidden by Hettel to woo his daughter, invades his kingdom, and, after a battle, Gudrun, with Hettel’s consent, is betrothed to him.</p>
 			</header>
 			<p>
 				<span>
@@ -35,7 +35,7 @@
 				<br/>
 				<span>
 					<span>He, with all his kinsmen,</span>
-					<span>to woo Gu-drun, as best they might, made ready.</span>
+					<span>to woo Gudrun, as best they might, made ready.</span>
 				</span>
 			</p>
 			<p>
@@ -62,7 +62,7 @@
 			<p>
 				<span>
 					<span>The king forbade him longer</span>
-					<span>to woo Gu-drun, his child;</span>
+					<span>to woo Gudrun, his child;</span>
 				</span>
 				<br/>
 				<span>
@@ -276,7 +276,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Well Gu-drun’s brave father</span>
+					<span>Well Gudrun’s brave father</span>
 					<span>must fear to meet their hate,</span>
 				</span>
 				<br/>
@@ -323,7 +323,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Gu-drun now saw with wonder,</span>
+					<span>Gudrun now saw with wonder,</span>
 					<span>her eyes upon him feeding:</span>
 				</span>
 				<br/>
@@ -418,7 +418,7 @@
 			</p>
 			<p>
 				<span>
-					<span>Gu-drun, the lovely maiden,</span>
+					<span>Gudrun, the lovely maiden,</span>
 					<span>looked on, and heard the din.</span>
 				</span>
 				<br/>
@@ -528,7 +528,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Gu-drun, the Hegeling maiden,</span>
+					<span>Gudrun, the Hegeling maiden,</span>
 					<span>still wavering in her mind.</span>
 				</span>
 				<br/>
@@ -559,7 +559,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>’Twas thought Gu-drun and Hilda</span>
+					<span>’Twas thought Gudrun and Hilda</span>
 					<span>should grant his suit, without a longer waiting.</span>
 				</span>
 			</p>
@@ -643,7 +643,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Whether Gu-drun, their daughter,</span>
+					<span>Whether Gudrun, their daughter,</span>
 					<span>was glad or sorry for the kingly Herwic’s wooing.</span>
 				</span>
 			</p>
