--- a/src/epub/text/tale-13.xhtml
+++ b/src/epub/text/tale-13.xhtml
@@ -15,7 +15,7 @@
 					</h2>
 					<p epub:type="title">How Siegfried Made War Against Herwic</p>
 				</hgroup>
-				<p epub:type="bridgehead">Siegfried, a rival suitor for Gu-drun, invades the land of Herwic, who sends to Hettel for his assistance: Hettel with many of his vassals comes to his help. Siegfried is driven into a castle, and there besieged.</p>
+				<p epub:type="bridgehead">Siegfried, a rival suitor for Gudrun, invades the land of Herwic, who sends to Hettel for his assistance: Hettel with many of his vassals comes to his help. Siegfried is driven into a castle, and there besieged.</p>
 			</header>
 			<p>
 				<span>
@@ -203,7 +203,7 @@
 				<br/>
 				<span>
 					<span>All his lands lay smoking:</span>
-					<span>of this to Gu-drun, his lady, sent he warning.</span>
+					<span>of this to Gudrun, his lady, sent he warning.</span>
 				</span>
 			</p>
 			<p>
@@ -376,7 +376,7 @@
 			</p>
 			<p>
 				<span>
-					<span>Gu-drun, the lovely maiden,</span>
+					<span>Gudrun, the lovely maiden,</span>
 					<span>then from her seat upstood;</span>
 				</span>
 				<br/>
@@ -623,7 +623,7 @@
 				<br/>
 				<span>
 					<span>Came Horant with four thousand,</span>
-					<span>to whom the fair Gu-drun had sent her warning.</span>
+					<span>to whom the fair Gudrun had sent her warning.</span>
 				</span>
 			</p>
 			<p>
@@ -780,7 +780,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Gu-drun, the lovely lady,</span>
+					<span>Gudrun, the lovely lady,</span>
 					<span>had called him from his home</span>
 				</span>
 				<br/>
