--- a/src/epub/text/tale-14.xhtml
+++ b/src/epub/text/tale-14.xhtml
@@ -15,7 +15,7 @@
 					</h2>
 					<p epub:type="title">How Hettel Sent Tidings from Herwic’s Land</p>
 				</hgroup>
-				<p epub:type="bridgehead">Hettel sends to announce to Hilda, his wife, and to Gu-drun, his daughter, his success in the fight with Siegfried. Hartmut, the Norman, takes advantage of the absence of both Hettel and Herwic, and invades the Hegeling kingdom.</p>
+				<p epub:type="bridgehead">Hettel sends to announce to Hilda, his wife, and to Gudrun, his daughter, his success in the fight with Siegfried. Hartmut, the Norman, takes advantage of the absence of both Hettel and Herwic, and invades the Hegeling kingdom.</p>
 			</header>
 			<p>
 				<span>
@@ -51,7 +51,7 @@
 				<br/>
 				<span>
 					<span>To help the lord of Sealand,</span>
-					<span>loved by Gu-drun, his daughter;</span>
+					<span>loved by Gudrun, his daughter;</span>
 				</span>
 				<br/>
 				<span>
@@ -76,7 +76,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Then said Gu-drun: “God grant it,</span>
+					<span>Then said Gudrun: “God grant it,</span>
 					<span>that they our friends may back in health be leading.”</span>
 				</span>
 			</p>
@@ -260,7 +260,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Gu-drun they might lay hold on,</span>
+					<span>Gudrun they might lay hold on,</span>
 					<span>and to their home might carry,</span>
 				</span>
 				<br/>
@@ -329,7 +329,7 @@
 				<br/>
 				<span>
 					<span>With these it will be easy</span>
-					<span>to seize Gu-drun, and bear her from her father.”</span>
+					<span>to seize Gudrun, and bear her from her father.”</span>
 				</span>
 			</p>
 			<p>
@@ -382,7 +382,7 @@
 				<br/>
 				<span>
 					<span>For this she plotted ever,</span>
-					<span>that fair Gu-drun be wooed,</span>
+					<span>that fair Gudrun be wooed,</span>
 				</span>
 				<br/>
 				<span>
@@ -507,7 +507,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Now for Gu-drun young Hartmut</span>
+					<span>Now for Gudrun young Hartmut</span>
 					<span>a weight of sorrow bore:</span>
 				</span>
 				<br/>
