--- a/src/epub/text/tale-15.xhtml
+++ b/src/epub/text/tale-15.xhtml
@@ -15,7 +15,7 @@
 					</h2>
 					<p epub:type="title">How Hartmut Carried Away Gudrun</p>
 				</hgroup>
-				<p epub:type="bridgehead">Hartmut sends messengers again to Gu-drun to ask her hand, and threatens to take her by force if she still rejects his suit. She answers that she is betrothed to Herwic, and refuses him. Hartmut and Ludwig bring an army and capture the Hegeling castle, and carry away Gu-drun with her hand-maidens.</p>
+				<p epub:type="bridgehead">Hartmut sends messengers again to Gudrun to ask her hand, and threatens to take her by force if she still rejects his suit. She answers that she is betrothed to Herwic, and refuses him. Hartmut and Ludwig bring an army and capture the Hegeling castle, and carry away Gudrun with her handmaidens.</p>
 			</header>
 			<p>
 				<span>
@@ -97,7 +97,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>I will show Gu-drun, fair maiden,</span>
+					<span>I will show Gudrun, fair maiden,</span>
 					<span>brave knights enough, to be for her eyes fine feeding!</span>
 				</span>
 			</p>
@@ -240,12 +240,12 @@
 				<br/>
 				<span>
 					<span>Hither rode to Matelan,</span>
-					<span>and for Gu-drun were suing:</span>
+					<span>and for Gudrun were suing:</span>
 				</span>
 				<br/>
 				<span>
 					<span>Hilda hushed the tidings,</span>
-					<span>for now Gu-drun in fright the tale was ruing.</span>
+					<span>for now Gudrun in fright the tale was ruing.</span>
 				</span>
 			</p>
 			<p>
@@ -287,7 +287,7 @@
 				<br/>
 				<span>
 					<span>They never left uncared for</span>
-					<span>Hilda the queen, and eke Gu-drun the maiden.</span>
+					<span>Hilda the queen, and eke Gudrun the maiden.</span>
 				</span>
 			</p>
 			<p>
@@ -302,7 +302,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>As did Gu-drun the lady,</span>
+					<span>As did Gudrun the lady,</span>
 					<span>with fair and lofty bearing;</span>
 				</span>
 				<br/>
@@ -350,7 +350,7 @@
 				<br/>
 				<span>
 					<span>That for their master, Hartmut,</span>
-					<span>they for the fair Gu-drun had come a-wooing.</span>
+					<span>they for the fair Gudrun had come a-wooing.</span>
 				</span>
 			</p>
 			<p>
@@ -475,7 +475,7 @@
 				<br/>
 				<span>
 					<span>And what had them befallen,</span>
-					<span>and how his courtship by Gu-drun was greeted.</span>
+					<span>and how his courtship by Gudrun was greeted.</span>
 				</span>
 			</p>
 			<p>
@@ -553,7 +553,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>To seek Gu-drun are coming</span>
+					<span>To seek Gudrun are coming</span>
 					<span>foemen grim and daring;</span>
 				</span>
 				<br/>
@@ -874,7 +874,7 @@
 				<br/>
 				<span>
 					<span>Thro’ the halls were rushing,</span>
-					<span>and from her home the fair Gu-drun were tearing.</span>
+					<span>and from her home the fair Gudrun were tearing.</span>
 				</span>
 			</p>
 			<p>
@@ -895,7 +895,7 @@
 				<br/>
 				<span>
 					<span>That back to their homes in Normandy,</span>
-					<span>without Gu-drun, would they have soon been driven.</span>
+					<span>without Gudrun, would they have soon been driven.</span>
 				</span>
 			</p>
 			<p>
@@ -922,7 +922,7 @@
 			<p>
 				<span>
 					<span>Then came the bold young Hartmut</span>
-					<span>where he Gu-drun could see,</span>
+					<span>where he Gudrun could see,</span>
 				</span>
 				<br/>
 				<span>
@@ -1020,7 +1020,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>To Gu-drun the hand of Ludwig</span>
+					<span>To Gudrun the hand of Ludwig</span>
 					<span>brought a heavy wrong, and woe full bitter.</span>
 				</span>
 			</p>
@@ -1074,7 +1074,7 @@
 				<br/>
 				<span>
 					<span>No one there was happy,</span>
-					<span>when from the father-land</span>
+					<span>when from the fatherland</span>
 				</span>
 				<br/>
 				<span>
@@ -1104,7 +1104,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Both Gu-drun and Hildeburg</span>
+					<span>Both Gudrun and Hildeburg</span>
 					<span>he with him carried off⁠—the prize he wanted.</span>
 				</span>
 			</p>
