--- a/src/epub/text/tale-16.xhtml
+++ b/src/epub/text/tale-16.xhtml
@@ -155,7 +155,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Gu-drun from thence is carried;</span>
+					<span>Gudrun from thence is carried;</span>
 					<span>her maidens, too, are taken:</span>
 				</span>
 				<br/>
@@ -213,7 +213,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>For his bride, Gu-drun my daughter;</span>
+					<span>For his bride, Gudrun my daughter;</span>
 					<span>for this he now doth strive</span>
 				</span>
 				<br/>
@@ -371,7 +371,7 @@
 				<br/>
 				<span>
 					<span>Our men, who here besiege him,</span>
-					<span>to seek for fair Gu-drun we may then be sparing.”</span>
+					<span>to seek for fair Gudrun we may then be sparing.”</span>
 				</span>
 			</p>
 			<p>
