--- a/src/epub/text/tale-17.xhtml
+++ b/src/epub/text/tale-17.xhtml
@@ -15,7 +15,7 @@
 					</h2>
 					<p epub:type="title">How Hettel Came to the Wulpensand in Search of His Daughter</p>
 				</hgroup>
-				<p epub:type="bridgehead">Ludwig and Hartmut, on their way to Normandy with Gu-drun, stop at a desert island, called Wulpensand; Hettel and Herwic, in pursuit, reach the island, and a battle ensues.</p>
+				<p epub:type="bridgehead">Ludwig and Hartmut, on their way to Normandy with Gudrun, stop at a desert island, called Wulpensand; Hettel and Herwic, in pursuit, reach the island, and a battle ensues.</p>
 			</header>
 			<p>
 				<span>
@@ -129,7 +129,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>The fair Gu-drun had taken</span>
+					<span>The fair Gudrun had taken</span>
 					<span>unto this lonely strand;</span>
 				</span>
 				<br/>
@@ -643,7 +643,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Gu-drun was bitterly weeping:</span>
+					<span>Gudrun was bitterly weeping:</span>
 					<span>her women, too, were deepest sorrow feeling.</span>
 				</span>
 			</p>
@@ -686,7 +686,7 @@
 				<br/>
 				<span>
 					<span>Their foes they wounded deeply,</span>
-					<span>and guarded thus Gu-drun from those who sought her.</span>
+					<span>and guarded thus Gudrun from those who sought her.</span>
 				</span>
 			</p>
 			<p>
