--- a/src/epub/text/tale-18.xhtml
+++ b/src/epub/text/tale-18.xhtml
@@ -50,7 +50,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Gu-drun to mourn her father,</span>
+					<span>Gudrun to mourn her father,</span>
 					<span>so did many a maiden;</span>
 				</span>
 				<br/>
@@ -98,7 +98,7 @@
 				<br/>
 				<span>
 					<span>Away from the Wulpensand</span>
-					<span>they only wished to bring Gu-drun, their lady.</span>
+					<span>they only wished to bring Gudrun, their lady.</span>
 				</span>
 			</p>
 			<p>
