--- a/src/epub/text/tale-19.xhtml
+++ b/src/epub/text/tale-19.xhtml
@@ -56,7 +56,7 @@
 				<br/>
 				<span>
 					<span>She there was waiting daily,</span>
-					<span>hoping her men would bring Gu-drun the maiden.</span>
+					<span>hoping her men would bring Gudrun the maiden.</span>
 				</span>
 			</p>
 			<p>
@@ -182,7 +182,7 @@
 				<br/>
 				<span>
 					<span>Lost are child and husband!</span>
-					<span>Gu-drun I ne’er shall see, from me forever stolen.”</span>
+					<span>Gudrun I ne’er shall see, from me forever stolen.”</span>
 				</span>
 			</p>
 			<p>
@@ -245,7 +245,7 @@
 				<br/>
 				<span>
 					<span>That I, poor God-forsaken,</span>
-					<span>might see Gu-drun again, naught else were wanted.”</span>
+					<span>might see Gudrun again, naught else were wanted.”</span>
 				</span>
 			</p>
 			<p>
@@ -486,7 +486,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Meanwhile Gu-drun, my daughter,</span>
+					<span>Meanwhile Gudrun, my daughter,</span>
 					<span>held by foemen strong,</span>
 				</span>
 				<br/>
@@ -534,7 +534,7 @@
 				<br/>
 				<span>
 					<span>Whoe’er of me is mindful,</span>
-					<span>and of Gu-drun, poor maiden,</span>
+					<span>and of Gudrun, poor maiden,</span>
 				</span>
 				<br/>
 				<span>
