--- a/src/epub/text/tale-2.xhtml
+++ b/src/epub/text/tale-2.xhtml
@@ -644,7 +644,7 @@
 				<br/>
 				<span>
 					<span>Their roaming o’er the hillsides,</span>
-					<span>and, far or near, at their good-will to wander.</span>
+					<span>and, far or near, at their goodwill to wander.</span>
 				</span>
 			</p>
 			<p>
@@ -833,7 +833,7 @@
 				<br/>
 				<span>
 					<span>As if they still were living,</span>
-					<span>each in her father-land, on fare more homely.</span>
+					<span>each in her fatherland, on fare more homely.</span>
 				</span>
 			</p>
 			<p>
