--- a/src/epub/text/tale-20.xhtml
+++ b/src/epub/text/tale-20.xhtml
@@ -15,7 +15,7 @@
 					</h2>
 					<p epub:type="title">How Hartmut Went Home to Normandy</p>
 				</hgroup>
-				<p epub:type="bridgehead">The Normans reach their land with Gu-drun and her maidens; she refuses to marry Hartmut, and is placed in the care of Gerlind, his mother, who treats her harshly and obliges her to perform menial service. Ortrun, the sister of Hartmut, shows kindness to Gu-drun.</p>
+				<p epub:type="bridgehead">The Normans reach their land with Gudrun and her maidens; she refuses to marry Hartmut, and is placed in the care of Gerlind, his mother, who treats her harshly and obliges her to perform menial service. Ortrun, the sister of Hartmut, shows kindness to Gudrun.</p>
 			</header>
 			<p>
 				<span>
@@ -130,7 +130,7 @@
 				<br/>
 				<span>
 					<span>Thus the lordly Norman</span>
-					<span>to Gu-drun, the maiden, spoke:</span>
+					<span>to Gudrun, the maiden, spoke:</span>
 				</span>
 				<br/>
 				<span>
@@ -297,7 +297,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Gu-drun, the lovely maiden,</span>
+					<span>Gudrun, the lovely maiden,</span>
 					<span>dear to me as life?</span>
 				</span>
 				<br/>
@@ -328,7 +328,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Bid now Gu-drun, your lady,</span>
+					<span>Bid now Gudrun, your lady,</span>
 					<span>that she no more her scorn on me be spending.”</span>
 				</span>
 			</p>
@@ -450,7 +450,7 @@
 				<br/>
 				<span>
 					<span>Soon in her father’s kingdom</span>
-					<span>to see Gu-drun, the maiden,</span>
+					<span>to see Gudrun, the maiden,</span>
 				</span>
 				<br/>
 				<span>
@@ -497,7 +497,7 @@
 				<br/>
 				<span>
 					<span>Out of the gates they crowded,</span>
-					<span>and on their steeds not long in the court-yard waited.</span>
+					<span>and on their steeds not long in the courtyard waited.</span>
 				</span>
 			</p>
 			<p>
@@ -517,7 +517,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Gu-drun and her band of maidens,</span>
+					<span>Gudrun and her band of maidens,</span>
 					<span>alone of all, demeaned themselves but sadly.</span>
 				</span>
 			</p>
@@ -623,7 +623,7 @@
 				<br/>
 				<span>
 					<span>Then Ortrun strove to soothe her,</span>
-					<span>and did her best that with love Gu-drun should reward her.</span>
+					<span>and did her best that with love Gudrun should reward her.</span>
 				</span>
 			</p>
 			<p>
@@ -654,7 +654,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Gu-drun, fair maiden, sorrowed,</span>
+					<span>Gudrun, fair maiden, sorrowed,</span>
 					<span>and pain it gave to her</span>
 				</span>
 				<br/>
@@ -691,7 +691,7 @@
 			</p>
 			<p>
 				<span>
-					<span>To hold Gu-drun in honor</span>
+					<span>To hold Gudrun in honor</span>
 					<span>was Ortrun ever stern,</span>
 				</span>
 				<br/>
@@ -760,7 +760,7 @@
 				<br/>
 				<span>
 					<span>And to a stately palace</span>
-					<span>the fair Gu-drun he bore.</span>
+					<span>the fair Gudrun he bore.</span>
 				</span>
 				<br/>
 				<span>
@@ -801,7 +801,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>“When will Gu-drun be ready</span>
+					<span>“When will Gudrun be ready</span>
 					<span>to share young Hartmut’s life,</span>
 				</span>
 				<br/>
@@ -817,7 +817,7 @@
 			</p>
 			<p>
 				<span>
-					<span>Gu-drun to this had listened,</span>
+					<span>Gudrun to this had listened,</span>
 					<span>the wretched, homeless maid;</span>
 				</span>
 				<br/>
@@ -943,7 +943,7 @@
 			</p>
 			<p>
 				<span>
-					<span>So Gu-drun, the fair one,</span>
+					<span>So Gudrun, the fair one,</span>
 					<span>when Hartmut went that day,</span>
 				</span>
 				<br/>
@@ -1326,7 +1326,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>“Gu-drun, most lovely maiden,</span>
+					<span>“Gudrun, most lovely maiden,</span>
 					<span>what is the life you have led</span>
 				</span>
 				<br/>
@@ -1410,7 +1410,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>If we Gu-drun, proud maiden,</span>
+					<span>If we Gudrun, proud maiden,</span>
 					<span>for thirty years should pray,</span>
 				</span>
 				<br/>
@@ -1437,7 +1437,7 @@
 				<br/>
 				<span>
 					<span>And Hartmut never knew it;</span>
-					<span>erelong Gu-drun would find her</span>
+					<span>erelong Gudrun would find her</span>
 				</span>
 				<br/>
 				<span>
@@ -1448,7 +1448,7 @@
 			<p>
 				<span>
 					<span>Then went again old Gerlind</span>
-					<span>to where Gu-drun then sat,</span>
+					<span>to where Gudrun then sat,</span>
 				</span>
 				<br/>
 				<span>
@@ -1547,7 +1547,7 @@
 				<br/>
 				<span>
 					<span>For, more than any other,</span>
-					<span>he the fair Gu-drun for his true love wanted.</span>
+					<span>he the fair Gudrun for his true love wanted.</span>
 				</span>
 			</p>
 			<p>
@@ -1563,7 +1563,7 @@
 				<br/>
 				<span>
 					<span>In meanest clothing only:</span>
-					<span>Gu-drun but little heeded</span>
+					<span>Gudrun but little heeded</span>
 				</span>
 				<br/>
 				<span>
@@ -1662,7 +1662,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>“Gu-drun, most lovely maiden,</span>
+					<span>“Gudrun, most lovely maiden,</span>
 					<span>you well must understand</span>
 				</span>
 				<br/>
@@ -1777,7 +1777,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Gu-drun, the homeless maiden,</span>
+					<span>Gudrun, the homeless maiden,</span>
 					<span>her father’s loss still mourned, with tears o’erflowing.</span>
 				</span>
 			</p>
@@ -1840,7 +1840,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Would bring Gu-drun, poor lone one,</span>
+					<span>Would bring Gudrun, poor lone one,</span>
 					<span>to bear towards them all a better feeling.</span>
 				</span>
 			</p>
@@ -1857,7 +1857,7 @@
 				<br/>
 				<span>
 					<span>To me you will be helpful,</span>
-					<span>and bring Gu-drun, fair lady,</span>
+					<span>and bring Gudrun, fair lady,</span>
 				</span>
 				<br/>
 				<span>
@@ -1888,7 +1888,7 @@
 			</p>
 			<p>
 				<span>
-					<span>Gu-drun now said to Ortrun:</span>
+					<span>Gudrun now said to Ortrun:</span>
 					<span>“My hearty thanks you win,</span>
 				</span>
 				<br/>
