--- a/src/epub/text/tale-21.xhtml
+++ b/src/epub/text/tale-21.xhtml
@@ -15,11 +15,11 @@
 					</h2>
 					<p epub:type="title">How Gudrun Must Wash Clothes on the Beach</p>
 				</hgroup>
-				<p epub:type="bridgehead">Gu-drun receives better treatment, but, still refusing to marry Hartmut, she is sent to wash clothes on the seashore. Hildeburg, one of her maidens, obtains permission to share her labors, which are continued through many years.</p>
+				<p epub:type="bridgehead">Gudrun receives better treatment, but, still refusing to marry Hartmut, she is sent to wash clothes on the seashore. Hildeburg, one of her maidens, obtains permission to share her labors, which are continued through many years.</p>
 			</header>
 			<p>
 				<span>
-					<span>Then to Gu-drun they offered</span>
+					<span>Then to Gudrun they offered</span>
 					<span>castles strong and lands:</span>
 				</span>
 				<br/>
@@ -40,7 +40,7 @@
 			</p>
 			<p>
 				<span>
-					<span>First, Gu-drun was bidden</span>
+					<span>First, Gudrun was bidden</span>
 					<span>to leave her seat, that soon</span>
 				</span>
 				<br/>
@@ -124,7 +124,7 @@
 			</p>
 			<p>
 				<span>
-					<span>Gu-drun soon greeted kindly</span>
+					<span>Gudrun soon greeted kindly</span>
 					<span>many a friend and maid.</span>
 				</span>
 				<br/>
@@ -171,7 +171,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>He said: “Gu-drun, fair lady,</span>
+					<span>He said: “Gudrun, fair lady,</span>
 					<span>as good am I in birth</span>
 				</span>
 				<br/>
@@ -350,7 +350,7 @@
 				<br/>
 				<span>
 					<span>Nought I say against it.”</span>
-					<span>The poor Gu-drun her lot was wisely meeting.</span>
+					<span>The poor Gudrun her lot was wisely meeting.</span>
 				</span>
 			</p>
 			<p>
@@ -371,7 +371,7 @@
 				<br/>
 				<span>
 					<span>Yet was she spared by no one.</span>
-					<span>So was the fair Gu-drun by Gerlind worried.</span>
+					<span>So was the fair Gudrun by Gerlind worried.</span>
 				</span>
 			</p>
 			<p>
@@ -429,7 +429,7 @@
 				<br/>
 				<span>
 					<span>Who in this Norman kingdom</span>
-					<span>erst with Gu-drun were landing;</span>
+					<span>erst with Gudrun were landing;</span>
 				</span>
 				<br/>
 				<span>
@@ -528,7 +528,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>From this Gu-drun the high-born</span>
+					<span>From this Gudrun the high-born</span>
 					<span>gained at last some cheer.</span>
 				</span>
 				<br/>
