--- a/src/epub/text/tale-22.xhtml
+++ b/src/epub/text/tale-22.xhtml
@@ -181,7 +181,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>To none Gu-drun is dearer⁠—</span>
+					<span>To none Gudrun is dearer⁠—</span>
 					<span>the homeless maid, long sundered from her mother.”</span>
 				</span>
 			</p>
@@ -202,7 +202,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>For this Gu-drun, my lady,</span>
+					<span>For this Gudrun, my lady,</span>
 					<span>her father lost, and still her lot is ruing.</span>
 				</span>
 			</p>
@@ -287,7 +287,7 @@
 				<br/>
 				<span>
 					<span>For they to the Norman kingdom</span>
-					<span>must ride, to free Gu-drun from bondage dreary.</span>
+					<span>must ride, to free Gudrun from bondage dreary.</span>
 				</span>
 			</p>
 			<p>
@@ -434,7 +434,7 @@
 				<br/>
 				<span>
 					<span>’Twas then the friends of Hartmut</span>
-					<span>stole the maid Gu-drun, and homeward hasted.”</span>
+					<span>stole the maid Gudrun, and homeward hasted.”</span>
 				</span>
 			</p>
 			<p>
@@ -518,7 +518,7 @@
 				<br/>
 				<span>
 					<span>Whate’er to her might happen,</span>
-					<span>Gu-drun for all her ills was little caring.</span>
+					<span>Gudrun for all her ills was little caring.</span>
 				</span>
 			</p>
 			<p>
@@ -539,7 +539,7 @@
 				<br/>
 				<span>
 					<span>Now the knights were thinking</span>
-					<span>for the brother of Gu-drun ’twere best they should be sending.</span>
+					<span>for the brother of Gudrun ’twere best they should be sending.</span>
 				</span>
 			</p>
 			<p>
@@ -685,7 +685,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>To free Gu-drun, the maiden,</span>
+					<span>To free Gudrun, the maiden,</span>
 					<span>who sadly now among the Normans tarried.</span>
 				</span>
 			</p>
@@ -812,7 +812,7 @@
 				<br/>
 				<span>
 					<span>Who back to Lady Hilda</span>
-					<span>would gladly bring Gu-drun, of waiting weary.</span>
+					<span>would gladly bring Gudrun, of waiting weary.</span>
 				</span>
 			</p>
 			<p>
