--- a/src/epub/text/tale-23.xhtml
+++ b/src/epub/text/tale-23.xhtml
@@ -15,7 +15,7 @@
 					</h2>
 					<p epub:type="title">How Hilda’s Warriors Landed in Sight of Hartmut’s Kingdom</p>
 				</hgroup>
-				<p epub:type="bridgehead">Herwic and Ortwin, the brother of Gu-drun, agree to go forward in advance to procure intelligence in regard to her and her maidens.</p>
+				<p epub:type="bridgehead">Herwic and Ortwin, the brother of Gudrun, agree to go forward in advance to procure intelligence in regard to her and her maidens.</p>
 			</header>
 			<p>
 				<span>
@@ -281,7 +281,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>The maid, Gu-drun, is my sister,</span>
+					<span>The maid, Gudrun, is my sister,</span>
 					<span>child of my father and mother;</span>
 				</span>
 				<br/>
@@ -350,7 +350,7 @@
 				<br/>
 				<span>
 					<span>Whatever shall befall us,</span>
-					<span>and search will make till we Gu-drun recover.”</span>
+					<span>and search will make till we Gudrun recover.”</span>
 				</span>
 			</p>
 			<p>
