--- a/src/epub/text/tale-24.xhtml
+++ b/src/epub/text/tale-24.xhtml
@@ -15,7 +15,7 @@
 					</h2>
 					<p epub:type="title">How Their Coming Was Made Known to Gudrun</p>
 				</hgroup>
-				<p epub:type="bridgehead">While Gu-drun and Hildeburg are washing on the seashore, a swan announces to them the approach of Queen Hilda’s army for their rescue, and tells them that two knights will come the next morning to inform them still further of this.</p>
+				<p epub:type="bridgehead">While Gudrun and Hildeburg are washing on the seashore, a swan announces to them the approach of Queen Hilda’s army for their rescue, and tells them that two knights will come the next morning to inform them still further of this.</p>
 			</header>
 			<p>
 				<span>
@@ -34,19 +34,19 @@
 				</span>
 				<br/>
 				<span>
-					<span>Gu-drun and Hildeburg</span>
+					<span>Gudrun and Hildeburg</span>
 					<span>must wash all day on the sands where waves were dashing.</span>
 				</span>
 			</p>
 			<p>
 				<span>
-					<span>’Twas the time of spring-tide fasting,</span>
+					<span>’Twas the time of springtide fasting,</span>
 					<span>and at the noon of day.</span>
 				</span>
 				<br/>
 				<span>
 					<span>To them a swan came floating;</span>
-					<span>thereat Gu-drun ’gan say:</span>
+					<span>thereat Gudrun ’gan say:</span>
 				</span>
 				<br/>
 				<span>
@@ -113,7 +113,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>If you would hear of your birth-land,</span>
+					<span>If you would hear of your birthland,</span>
 					<span>listen while I tell you;</span>
 				</span>
 				<br/>
@@ -124,7 +124,7 @@
 			</p>
 			<p>
 				<span>
-					<span>At this, Gu-drun, the fair one,</span>
+					<span>At this, Gudrun, the fair one,</span>
 					<span>upon the sands down fell;</span>
 				</span>
 				<br/>
@@ -161,7 +161,7 @@
 				<br/>
 				<span>
 					<span>Is now Queen Hilda living?</span>
-					<span>Of poor Gu-drun is she the much-loved mother.”</span>
+					<span>Of poor Gudrun is she the much-loved mother.”</span>
 				</span>
 			</p>
 			<p>
@@ -376,7 +376,7 @@
 			</p>
 			<p>
 				<span>
-					<span>Gu-drun then asked him further:</span>
+					<span>Gudrun then asked him further:</span>
 					<span>“This would I also hear:</span>
 				</span>
 				<br/>
@@ -496,7 +496,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Gu-drun’s good, faithful kinsmen</span>
+					<span>Gudrun’s good, faithful kinsmen</span>
 					<span>were by the long-lost maids uneasily awaited.</span>
 				</span>
 			</p>
@@ -649,7 +649,7 @@
 			</p>
 			<p>
 				<span>
-					<span>Never Gu-drun, poor maiden,</span>
+					<span>Never Gudrun, poor maiden,</span>
 					<span>on a harder bed had lain;</span>
 				</span>
 				<br/>
@@ -686,7 +686,7 @@
 				<br/>
 				<span>
 					<span>She saw that snow had fallen,</span>
-					<span>and hope the heart-sick maid was wellnigh losing.</span>
+					<span>and hope the heart-sick maid was well-nigh losing.</span>
 				</span>
 			</p>
 			<p>
@@ -770,7 +770,7 @@
 				<br/>
 				<span>
 					<span>Dared not them to waken:</span>
-					<span>erelong Gu-drun yet greater woe was bearing.</span>
+					<span>erelong Gudrun yet greater woe was bearing.</span>
 				</span>
 			</p>
 			<p>
@@ -796,7 +796,7 @@
 			</p>
 			<p>
 				<span>
-					<span>Then said Gu-drun, in sorrow:</span>
+					<span>Then said Gudrun, in sorrow:</span>
 					<span>“I know not where to go,</span>
 				</span>
 				<br/>
@@ -843,7 +843,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>“Of this,” said Gu-drun,</span>
+					<span>“Of this,” said Gudrun,</span>
 					<span>“God willing, I will make you think.”</span>
 				</span>
 				<br/>
