--- a/src/epub/text/tale-25.xhtml
+++ b/src/epub/text/tale-25.xhtml
@@ -15,7 +15,7 @@
 					</h2>
 					<p epub:type="title">How Herwic and Ortwin Found Gudrun</p>
 				</hgroup>
-				<p epub:type="bridgehead">Herwic and Ortwin, coming in a boat, see the maidens washing on the shore, recognize them, and make themselves known. Thinking it dishonorable to take the maids away without winning them in fight, the knights return to bring their army. The maidens go back to Gerlind, and, feeling sure of her speedy rescue, Gu-drun pretends to agree to Hartmut’s suit, and is restored to favor.</p>
+				<p epub:type="bridgehead">Herwic and Ortwin, coming in a boat, see the maidens washing on the shore, recognize them, and make themselves known. Thinking it dishonorable to take the maids away without winning them in fight, the knights return to bring their army. The maidens go back to Gerlind, and, feeling sure of her speedy rescue, Gudrun pretends to agree to Hartmut’s suit, and is restored to favor.</p>
 			</header>
 			<p>
 				<span>
@@ -30,7 +30,7 @@
 				<br/>
 				<span>
 					<span>Then said the maiden, Hildeburg,</span>
-					<span>unto Gu-drun, the lady:</span>
+					<span>unto Gudrun, the lady:</span>
 				</span>
 				<br/>
 				<span>
@@ -187,7 +187,7 @@
 			</p>
 			<p>
 				<span>
-					<span>Gu-drun, the maid, then answered:</span>
+					<span>Gudrun, the maid, then answered:</span>
 					<span>“It were a shame, forsooth,</span>
 				</span>
 				<br/>
@@ -439,7 +439,7 @@
 			</p>
 			<p>
 				<span>
-					<span>To him Gu-drun thus answered:</span>
+					<span>To him Gudrun thus answered:</span>
 					<span>“Hartmut is one of the lords</span>
 				</span>
 				<br/>
@@ -481,7 +481,7 @@
 			</p>
 			<p>
 				<span>
-					<span>Gu-drun, the high-born lady,</span>
+					<span>Gudrun, the high-born lady,</span>
 					<span>thus to the warrior spake:</span>
 				</span>
 				<br/>
@@ -523,7 +523,7 @@
 			</p>
 			<p>
 				<span>
-					<span>To him Gu-drun thus answered:</span>
+					<span>To him Gudrun thus answered:</span>
 					<span>“Of that we nothing know;</span>
 				</span>
 				<br/>
@@ -622,7 +622,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Gu-drun was one among them,</span>
+					<span>Gudrun was one among them,</span>
 					<span>and gladly would we learn where she has tarried.”</span>
 				</span>
 			</p>
@@ -664,7 +664,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Gu-drun, Queen Hilda’s daughter,</span>
+					<span>Gudrun, Queen Hilda’s daughter,</span>
 					<span>and all she told had erst herself befallen.</span>
 				</span>
 			</p>
@@ -675,7 +675,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>If fair Gu-drun, your sister,</span>
+					<span>If fair Gudrun, your sister,</span>
 					<span>yet alive may be,</span>
 				</span>
 				<br/>
@@ -712,7 +712,7 @@
 			</p>
 			<p>
 				<span>
-					<span>When now Gu-drun, who listened,</span>
+					<span>When now Gudrun, who listened,</span>
 					<span>heard the name of the man,</span>
 				</span>
 				<br/>
@@ -764,7 +764,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Gu-drun you here are seeking,</span>
+					<span>Gudrun you here are seeking,</span>
 					<span>but need not thus have hasted;</span>
 				</span>
 				<br/>
@@ -786,7 +786,7 @@
 				<br/>
 				<span>
 					<span>The tidings to them given⁠—</span>
-					<span>that fair Gu-drun, their lady,</span>
+					<span>that fair Gudrun, their lady,</span>
 				</span>
 				<br/>
 				<span>
@@ -811,7 +811,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>That to Gu-drun, the maiden,</span>
+					<span>That to Gudrun, the maiden,</span>
 					<span>you worthy knights are love and kinship bearing.”</span>
 				</span>
 			</p>
@@ -870,7 +870,7 @@
 				<br/>
 				<span>
 					<span>With this were we betrothèd:</span>
-					<span>to Gu-drun I am faithful ever,</span>
+					<span>to Gudrun I am faithful ever,</span>
 				</span>
 				<br/>
 				<span>
@@ -895,7 +895,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Gu-drun, the queenly maiden,</span>
+					<span>Gudrun, the queenly maiden,</span>
 					<span>of this same ring had whilom been the wearer.</span>
 				</span>
 			</p>
@@ -1105,7 +1105,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Gu-drun, my worthy sister,</span>
+					<span>Gudrun, my worthy sister,</span>
 					<span>should ne’er forsake her maids, in bondage dreary.”</span>
 				</span>
 			</p>
@@ -1174,7 +1174,7 @@
 			</p>
 			<p>
 				<span>
-					<span>Gu-drun was heavy-hearted</span>
+					<span>Gudrun was heavy-hearted</span>
 					<span>as they went on board the boat;</span>
 				</span>
 				<br/>
@@ -1200,7 +1200,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Gu-drun, the maid, heart-broken,</span>
+					<span>Gudrun, the maid, heart-broken,</span>
 					<span>to Herwic called to stay:</span>
 				</span>
 				<br/>
@@ -1258,7 +1258,7 @@
 			</p>
 			<p>
 				<span>
-					<span>Gu-drun, the queenly maiden,</span>
+					<span>Gudrun, the queenly maiden,</span>
 					<span>her washing now forgot;</span>
 				</span>
 				<br/>
@@ -1385,7 +1385,7 @@
 			<p>
 				<span>
 					<span>Whate’er was said by Hildeburg,</span>
-					<span>Gu-drun the clothes then took,</span>
+					<span>Gudrun the clothes then took,</span>
 				</span>
 				<br/>
 				<span>
@@ -1420,7 +1420,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Gu-drun, young Ortwin’s sister,</span>
+					<span>Gudrun, young Ortwin’s sister,</span>
 					<span>with Hildeburg went also, bearing nothing.</span>
 				</span>
 			</p>
@@ -1636,7 +1636,7 @@
 			</p>
 			<p>
 				<span>
-					<span>Then spake Gu-drun, with cunning:</span>
+					<span>Then spake Gudrun, with cunning:</span>
 					<span>“Now list to what I say:</span>
 				</span>
 				<br/>
@@ -1736,7 +1736,7 @@
 				<br/>
 				<span>
 					<span>When word to him was given</span>
-					<span>in haste to seek Gu-drun, who for him waited.</span>
+					<span>in haste to seek Gudrun, who for him waited.</span>
 				</span>
 			</p>
 			<p>
@@ -1793,7 +1793,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Gu-drun, the maid, has said it.</span>
+					<span>Gudrun, the maid, has said it.</span>
 					<span>To love you she is ready;</span>
 				</span>
 				<br/>
@@ -1862,7 +1862,7 @@
 				<br/>
 				<span>
 					<span>You, a king so mighty,</span>
-					<span>if in your arms Gu-drun you should be folding.”</span>
+					<span>if in your arms Gudrun you should be folding.”</span>
 				</span>
 			</p>
 			<p>
@@ -1893,7 +1893,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>And thus Gu-drun he answered:</span>
+					<span>And thus Gudrun he answered:</span>
 					<span>“Maiden fair and true,</span>
 				</span>
 				<br/>
@@ -1977,7 +1977,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Then Gu-drun, the high-born,</span>
+					<span>Then Gudrun, the high-born,</span>
 					<span>with lofty breeding spoke:</span>
 				</span>
 				<br/>
@@ -2019,7 +2019,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>“Gu-drun, belovèd lady,</span>
+					<span>“Gudrun, belovèd lady,</span>
 					<span>if clothes the maids have none</span>
 				</span>
 				<br/>
@@ -2050,13 +2050,13 @@
 				</span>
 				<br/>
 				<span>
-					<span>To help Gu-drun they hastened,</span>
+					<span>To help Gudrun they hastened,</span>
 					<span>thinking that later she their hopes would further.</span>
 				</span>
 			</p>
 			<p>
 				<span>
-					<span>Gu-drun and all her maidens</span>
+					<span>Gudrun and all her maidens</span>
 					<span>were by the bath made glad;</span>
 				</span>
 				<br/>
@@ -2124,7 +2124,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>To seek Gu-drun then straightway</span>
+					<span>To seek Gudrun then straightway</span>
 					<span>gladly did she haste.</span>
 				</span>
 				<br/>
@@ -2161,7 +2161,7 @@
 			</p>
 			<p>
 				<span>
-					<span>The poor Gu-drun was blithesome,</span>
+					<span>The poor Gudrun was blithesome,</span>
 					<span>as we have said before,</span>
 				</span>
 				<br/>
@@ -2225,7 +2225,7 @@
 			<p>
 				<span>
 					<span>Then with maiden wiliness</span>
-					<span>spake the fair Gu-drun:</span>
+					<span>spake the fair Gudrun:</span>
 				</span>
 				<br/>
 				<span>
@@ -2282,7 +2282,7 @@
 				<br/>
 				<span>
 					<span>Fewer foes should meet them:</span>
-					<span>for this was Gu-drun their going thence bespeaking.</span>
+					<span>for this was Gudrun their going thence bespeaking.</span>
 				</span>
 			</p>
 			<p>
@@ -2302,7 +2302,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>She left Gu-drun, low bowing,</span>
+					<span>She left Gudrun, low bowing,</span>
 					<span>and begged that God would her in his ways be leading.</span>
 				</span>
 			</p>
@@ -2366,7 +2366,7 @@
 				<br/>
 				<span>
 					<span>All then wept together;</span>
-					<span>but they saw their mistress, fair Gu-drun, was smiling.</span>
+					<span>but they saw their mistress, fair Gudrun, was smiling.</span>
 				</span>
 			</p>
 			<p>
@@ -2429,7 +2429,7 @@
 				<br/>
 				<span>
 					<span>Why it is I know not,</span>
-					<span>the fair young queen, Gu-drun, is now so smiling.</span>
+					<span>the fair young queen, Gudrun, is now so smiling.</span>
 				</span>
 			</p>
 			<p>
@@ -2476,7 +2476,7 @@
 			</p>
 			<p>
 				<span>
-					<span>Gu-drun, now over-wearied,</span>
+					<span>Gudrun, now over-wearied,</span>
 					<span>some of her maidens sent</span>
 				</span>
 				<br/>
@@ -2513,7 +2513,7 @@
 				<br/>
 				<span>
 					<span>Nice were they and cleanly,</span>
-					<span>meet for Gu-drun and many a well-born lady.</span>
+					<span>meet for Gudrun and many a well-born lady.</span>
 				</span>
 			</p>
 			<p>
@@ -2628,7 +2628,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Then said Gu-drun, the queenly:</span>
+					<span>Then said Gudrun, the queenly:</span>
 					<span>“Dearest maidens mine,</span>
 				</span>
 				<br/>
