--- a/src/epub/text/tale-26.xhtml
+++ b/src/epub/text/tale-26.xhtml
@@ -55,7 +55,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>If still Gu-drun were living,</span>
+					<span>If still Gudrun were living,</span>
 					<span>and if in Ludwig’s land she now was dwelling?</span>
 				</span>
 			</p>
@@ -108,7 +108,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Gu-drun, my long-lost sister,</span>
+					<span>Gudrun, my long-lost sister,</span>
 					<span>I, in truth, have seen,</span>
 				</span>
 				<br/>
@@ -160,7 +160,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>We found Gu-drun and Hildeburg</span>
+					<span>We found Gudrun and Hildeburg</span>
 					<span>upon the seashore standing, washing in the water.”</span>
 				</span>
 			</p>
@@ -188,7 +188,7 @@
 			<p>
 				<span>
 					<span>“But if you are in earnest,</span>
-					<span>to help Gu-drun in her need,</span>
+					<span>to help Gudrun in her need,</span>
 				</span>
 				<br/>
 				<span>
@@ -455,7 +455,7 @@
 				<br/>
 				<span>
 					<span>That she might bring the tidings,</span>
-					<span>and rich reward from fair Gu-drun be seeking.</span>
+					<span>and rich reward from fair Gudrun be seeking.</span>
 				</span>
 			</p>
 			<p>
@@ -482,7 +482,7 @@
 			<p>
 				<span>
 					<span>Back then went the maiden</span>
-					<span>to where Gu-drun she found:</span>
+					<span>to where Gudrun she found:</span>
 				</span>
 				<br/>
 				<span>
@@ -502,7 +502,7 @@
 			</p>
 			<p>
 				<span>
-					<span>Gu-drun, the high-born lady,</span>
+					<span>Gudrun, the high-born lady,</span>
 					<span>quickly sprang from her bed,</span>
 				</span>
 				<br/>
@@ -518,7 +518,7 @@
 				<br/>
 				<span>
 					<span>After her heavy sorrow,</span>
-					<span>now for her friends Gu-drun was sorely yearning.</span>
+					<span>now for her friends Gudrun was sorely yearning.</span>
 				</span>
 			</p>
 			<p>
@@ -601,7 +601,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>That smile of young Gu-drun</span>
+					<span>That smile of young Gudrun</span>
 					<span>will cost your knights a strife as yet unheeded.”</span>
 				</span>
 			</p>
