--- a/src/epub/text/tale-27.xhtml
+++ b/src/epub/text/tale-27.xhtml
@@ -314,7 +314,7 @@
 			<p>
 				<span>
 					<span>“Now, mother, let us see you</span>
-					<span>send Gu-drun to wash,</span>
+					<span>send Gudrun to wash,</span>
 				</span>
 				<br/>
 				<span>
@@ -755,7 +755,7 @@
 			<p>
 				<span>
 					<span>Then came Herwic also,</span>
-					<span>betrothed to fair Gu-drun;</span>
+					<span>betrothed to fair Gudrun;</span>
 				</span>
 				<br/>
 				<span>
@@ -791,7 +791,7 @@
 				<br/>
 				<span>
 					<span>Sad was the sight to Gerlind,</span>
-					<span>but other were the thoughts Gu-drun was hiding.</span>
+					<span>but other were the thoughts Gudrun was hiding.</span>
 				</span>
 			</p>
 			<p>
@@ -1022,7 +1022,7 @@
 				<br/>
 				<span>
 					<span>The boon could e’er befall him,</span>
-					<span>that the eyes of fair Gu-drun on him were beaming?</span>
+					<span>that the eyes of fair Gudrun on him were beaming?</span>
 				</span>
 			</p>
 			<p>
@@ -1095,7 +1095,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Thicker then than snow-flakes</span>
+					<span>Thicker then than snowflakes</span>
 					<span>blown by the wind are seen,</span>
 				</span>
 				<br/>
@@ -1111,7 +1111,7 @@
 			</p>
 			<p>
 				<span>
-					<span>Gu-drun’s young brother, Ortwin,</span>
+					<span>Gudrun’s young brother, Ortwin,</span>
 					<span>was bold and brave enow,</span>
 				</span>
 				<br/>
