--- a/src/epub/text/tale-28.xhtml
+++ b/src/epub/text/tale-28.xhtml
@@ -15,7 +15,7 @@
 					</h2>
 					<p epub:type="title">How Herwic Slew Ludwig</p>
 				</hgroup>
-				<p epub:type="bridgehead">Herwic, feeling mortified that Gu-drun from the castle should see his fall, returns to the fight, and slays Ludwig. Gerlind bribes one of her men to put Gu-drun to death, but he is prevented by the threats of Hartmut. Hartmut is taken prisoner, and carried on board a ship.</p>
+				<p epub:type="bridgehead">Herwic, feeling mortified that Gudrun from the castle should see his fall, returns to the fight, and slays Ludwig. Gerlind bribes one of her men to put Gudrun to death, but he is prevented by the threats of Hartmut. Hartmut is taken prisoner, and carried on board a ship.</p>
 			</header>
 			<p>
 				<span>
@@ -24,7 +24,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>If fair Gu-drun, my lady,</span>
+					<span>If fair Gudrun, my lady,</span>
 					<span>my fall did lately see.</span>
 				</span>
 				<br/>
@@ -103,7 +103,7 @@
 			</p>
 			<p>
 				<span>
-					<span>Soon Gu-drun’s betrothèd</span>
+					<span>Soon Gudrun’s betrothèd</span>
 					<span>reached over Ludwig’s shield,</span>
 				</span>
 				<br/>
@@ -181,7 +181,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Gu-drun and all her maidens</span>
+					<span>Gudrun and all her maidens</span>
 					<span>stood in the hall in fear, and loud were crying.</span>
 				</span>
 			</p>
@@ -391,7 +391,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Gu-drun’s good friends and champions</span>
+					<span>Gudrun’s good friends and champions</span>
 					<span>will spare no toil; to win the day they’re burning.</span>
 				</span>
 			</p>
@@ -428,7 +428,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Gu-drun’s young brother is he;</span>
+					<span>Gudrun’s young brother is he;</span>
 					<span>fair women’s smiles he’s seeking:</span>
 				</span>
 				<br/>
@@ -455,7 +455,7 @@
 				<br/>
 				<span>
 					<span>On him are gazing gladly</span>
-					<span>the fair Gu-drun, and many maids already.</span>
+					<span>the fair Gudrun, and many maids already.</span>
 				</span>
 			</p>
 			<p>
@@ -664,7 +664,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>And would Gu-drun be slaying,</span>
+					<span>And would Gudrun be slaying,</span>
 					<span>with all the maids who there her lot were sharing.</span>
 				</span>
 			</p>
@@ -806,7 +806,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>She to Gu-drun came nearer,</span>
+					<span>She to Gudrun came nearer,</span>
 					<span>the stately, high-born maiden,</span>
 				</span>
 				<br/>
@@ -907,7 +907,7 @@
 				<br/>
 				<span>
 					<span>Until within the window</span>
-					<span>Gu-drun at length she brought,</span>
+					<span>Gudrun at length she brought,</span>
 				</span>
 				<br/>
 				<span>
@@ -974,7 +974,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>She said: “Gu-drun they call me,</span>
+					<span>She said: “Gudrun they call me,</span>
 					<span>of Hagen’s blood I own me;</span>
 				</span>
 				<br/>
@@ -986,7 +986,7 @@
 			<p>
 				<span>
 					<span>He said: “If you, fair lady,</span>
-					<span>my dear Gu-drun can be,</span>
+					<span>my dear Gudrun can be,</span>
 				</span>
 				<br/>
 				<span>
