--- a/src/epub/text/tale-29.xhtml
+++ b/src/epub/text/tale-29.xhtml
@@ -15,7 +15,7 @@
 					</h2>
 					<p epub:type="title">How Hartmut Was Taken Prisoner</p>
 				</hgroup>
-				<p epub:type="bridgehead">The Hegelings obtain possession of the castle, and spare neither old nor young. Ortrun seeks refuge with Gu-drun, and Gerlind also implores her protection, but she is recognized and killed by Wâ-te. The Hegeling army devastate the land: Hartmut and Ortrun are held captive.</p>
+				<p epub:type="bridgehead">The Hegelings obtain possession of the castle, and spare neither old nor young. Ortrun seeks refuge with Gudrun, and Gerlind also implores her protection, but she is recognized and killed by Wâ-te. The Hegeling army devastate the land: Hartmut and Ortrun are held captive.</p>
 			</header>
 			<p>
 				<span>
@@ -244,7 +244,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Sought Gu-drun, kind maiden:</span>
+					<span>Sought Gudrun, kind maiden:</span>
 					<span>she feared yet greater wrongs before the morrow.</span>
 				</span>
 			</p>
@@ -255,7 +255,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>She said: “Gu-drun, my lady,</span>
+					<span>She said: “Gudrun, my lady,</span>
 					<span>have pity on my need,</span>
 				</span>
 				<br/>
@@ -314,7 +314,7 @@
 			<p>
 				<span>
 					<span>The old and wicked Gerlind</span>
-					<span>ran to Gu-drun in haste;</span>
+					<span>ran to Gudrun in haste;</span>
 				</span>
 				<br/>
 				<span>
@@ -361,7 +361,7 @@
 				<br/>
 				<span>
 					<span>He his teeth was gnashing,</span>
-					<span>and straight up-stood he there;</span>
+					<span>and straight upstood he there;</span>
 				</span>
 				<br/>
 				<span>
@@ -381,7 +381,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Though Gu-drun was glad to see him,</span>
+					<span>Though Gudrun was glad to see him,</span>
 					<span>she had liked it better yet</span>
 				</span>
 				<br/>
@@ -398,7 +398,7 @@
 			<p>
 				<span>
 					<span>To meet her friend, old Wâ-te,</span>
-					<span>went Gu-drun alone;</span>
+					<span>went Gudrun alone;</span>
 				</span>
 				<br/>
 				<span>
@@ -428,7 +428,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>“This,” said Gu-drun, in answer,</span>
+					<span>“This,” said Gudrun, in answer,</span>
 					<span>“is Ortrun, high in breeding;</span>
 				</span>
 				<br/>
@@ -486,7 +486,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>And said: “Gu-drun, good lady,</span>
+					<span>And said: “Gudrun, good lady,</span>
 					<span>on me with kindness look⁠—</span>
 				</span>
 				<br/>
@@ -502,7 +502,7 @@
 			</p>
 			<p>
 				<span>
-					<span>Gu-drun in anger answered:</span>
+					<span>Gudrun in anger answered:</span>
 					<span>“Stand back, come not so near!</span>
 				</span>
 				<br/>
@@ -539,7 +539,7 @@
 				<br/>
 				<span>
 					<span>That devilish crone, with her women,</span>
-					<span>the kindness of Gu-drun was now bespeaking.</span>
+					<span>the kindness of Gudrun was now bespeaking.</span>
 				</span>
 			</p>
 			<p>
@@ -549,7 +549,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>And said: “Gu-drun, my lady,</span>
+					<span>And said: “Gudrun, my lady,</span>
 					<span>send down, with her maidens all,</span>
 				</span>
 				<br/>
@@ -749,7 +749,7 @@
 				<br/>
 				<span>
 					<span>With a stroke he her beheaded,</span>
-					<span>while the maids in fright behind Gu-drun were fleeing.</span>
+					<span>while the maids in fright behind Gudrun were fleeing.</span>
 				</span>
 			</p>
 			<p>
@@ -769,7 +769,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Gu-drun her welcome gave him;</span>
+					<span>Gudrun her welcome gave him;</span>
 					<span>her love for him was shown, and kindness done them.</span>
 				</span>
 			</p>
@@ -833,7 +833,7 @@
 				<br/>
 				<span>
 					<span>A very loving welcome</span>
-					<span>to give to both the knights Gu-drun then hastened.</span>
+					<span>to give to both the knights Gudrun then hastened.</span>
 				</span>
 			</p>
 			<p>
@@ -970,7 +970,7 @@
 				<br/>
 				<span>
 					<span>With her were also taken.</span>
-					<span>Then said Gu-drun: “Forbear!</span>
+					<span>Then said Gudrun: “Forbear!</span>
 				</span>
 				<br/>
 				<span>
@@ -1016,7 +1016,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>To him was Gu-drun entrusted,</span>
+					<span>To him was Gudrun entrusted,</span>
 					<span>and all her maidens near her:</span>
 				</span>
 				<br/>
@@ -1042,7 +1042,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>And there Gu-drun, the maiden,</span>
+					<span>And there Gudrun, the maiden,</span>
 					<span>with him must stay, and nought she ever wanted.</span>
 				</span>
 			</p>
@@ -1222,7 +1222,7 @@
 				<br/>
 				<span>
 					<span>To guard for us this kingdom?</span>
-					<span>Bid now Gu-drun, the fair,</span>
+					<span>Bid now Gudrun, the fair,</span>
 				</span>
 				<br/>
 				<span>
@@ -1316,7 +1316,7 @@
 				<br/>
 				<span>
 					<span>They well might know the sorrows</span>
-					<span>felt by Gu-drun and her maids, who with them tarried.</span>
+					<span>felt by Gudrun and her maids, who with them tarried.</span>
 				</span>
 			</p>
 			<p>
