--- a/src/epub/text/tale-3.xhtml
+++ b/src/epub/text/tale-3.xhtml
@@ -723,7 +723,7 @@
 				<br/>
 				<span>
 					<span>And if upon this wanderer</span>
-					<span>be found the self-same token,</span>
+					<span>be found the selfsame token,</span>
 				</span>
 				<br/>
 				<span>
