--- a/src/epub/text/tale-30.xhtml
+++ b/src/epub/text/tale-30.xhtml
@@ -15,7 +15,7 @@
 					</h2>
 					<p epub:type="title">How Gudrun Was Brought Home to Hilda</p>
 				</hgroup>
-				<p epub:type="bridgehead">The Hegeling army returns home, bringing Gu-drun and her maidens, with the Norman captives. Hilda welcomes the returning ships, and embraces her daughter, whom she does not at first recognize, after her long absence. By Gu-drun’s request, Hilda is reconciled to Hartmut and Ortrun, and Ortwin takes Ortrun for his bride. Hartmut and his men are set free, on their promise not to escape, and Hartmut agrees to wed Hildeburg. Herwic’s sister is sent for, and betrothed to Siegfried.</p>
+				<p epub:type="bridgehead">The Hegeling army returns home, bringing Gudrun and her maidens, with the Norman captives. Hilda welcomes the returning ships, and embraces her daughter, whom she does not at first recognize, after her long absence. By Gudrun’s request, Hilda is reconciled to Hartmut and Ortrun, and Ortwin takes Ortrun for his bride. Hartmut and his men are set free, on their promise not to escape, and Hartmut agrees to wed Hildeburg. Herwic’s sister is sent for, and betrothed to Siegfried.</p>
 			</header>
 			<p>
 				<span>
@@ -202,7 +202,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>That fair Gu-drun and Herwic,</span>
+					<span>That fair Gudrun and Herwic,</span>
 					<span>as them beseemed, should worthily be seated.</span>
 				</span>
 			</p>
@@ -286,7 +286,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Gu-drun they saw was coming,</span>
+					<span>Gudrun they saw was coming,</span>
 					<span>with well-bred maidens wont to do her bidding.</span>
 				</span>
 			</p>
@@ -302,7 +302,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Gu-drun, the lovely maiden,</span>
+					<span>Gudrun, the lovely maiden,</span>
 					<span>came Irold, proud and knightly.</span>
 				</span>
 				<br/>
@@ -402,7 +402,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Gu-drun besought her mother</span>
+					<span>Gudrun besought her mother</span>
 					<span>kindly to meet the maid:</span>
 				</span>
 				<br/>
@@ -460,7 +460,7 @@
 			</p>
 			<p>
 				<span>
-					<span>Gu-drun to Hilda answered:</span>
+					<span>Gudrun to Hilda answered:</span>
 					<span>“Ne’er hath this lovely maid</span>
 				</span>
 				<br/>
@@ -481,7 +481,7 @@
 			</p>
 			<p>
 				<span>
-					<span>Gu-drun in vain besought her,</span>
+					<span>Gudrun in vain besought her,</span>
 					<span>until at last, with tears,</span>
 				</span>
 				<br/>
@@ -508,7 +508,7 @@
 				<br/>
 				<span>
 					<span>And greeted other ladies,</span>
-					<span>e’en as Gu-drun had willed.</span>
+					<span>e’en as Gudrun had willed.</span>
 				</span>
 				<br/>
 				<span>
@@ -523,7 +523,7 @@
 			</p>
 			<p>
 				<span>
-					<span>Then Gu-drun said further:</span>
+					<span>Then Gudrun said further:</span>
 					<span>“Mother, most dear to me,</span>
 				</span>
 				<br/>
@@ -770,7 +770,7 @@
 				<br/>
 				<span>
 					<span>Then at the feet of Hilda</span>
-					<span>Gu-drun fell down, with sixty maidens, kneeling.</span>
+					<span>Gudrun fell down, with sixty maidens, kneeling.</span>
 				</span>
 			</p>
 			<p>
@@ -843,7 +843,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Gu-drun then bade these warriors</span>
+					<span>Gudrun then bade these warriors</span>
 					<span>to bathe them in the sea;</span>
 				</span>
 				<br/>
@@ -1021,7 +1021,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>To crown Gu-drun, the fair one,</span>
+					<span>To crown Gudrun, the fair one,</span>
 					<span>King Herwic bade, for him it now well suited.</span>
 				</span>
 			</p>
@@ -1189,7 +1189,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Than now they shared so freely: that this should be, Gu-drun her best had striven.</span>
+					<span>Than now they shared so freely: that this should be, Gudrun her best had striven.</span>
 				</span>
 			</p>
 			<p>
@@ -1210,7 +1210,7 @@
 				<br/>
 				<span>
 					<span>She, King Ludwig’s daughter,</span>
-					<span>beside Gu-drun was seated then, as ever.</span>
+					<span>beside Gudrun was seated then, as ever.</span>
 				</span>
 			</p>
 			<p>
@@ -1314,7 +1314,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Him Gu-drun then answered:</span>
+					<span>Him Gudrun then answered:</span>
 					<span>“You’ll ne’er a sorry day with her be leading.”</span>
 				</span>
 			</p>
@@ -1384,7 +1384,7 @@
 			<p>
 				<span>
 					<span>Then to the high-born Hildeburg</span>
-					<span>Gu-drun the fair thus spake,</span>
+					<span>Gudrun the fair thus spake,</span>
 				</span>
 				<br/>
 				<span>
@@ -1425,7 +1425,7 @@
 			</p>
 			<p>
 				<span>
-					<span>Her Gu-drun thus answered:</span>
+					<span>Her Gudrun thus answered:</span>
 					<span>“Give not a thought to that:</span>
 				</span>
 				<br/>
@@ -1509,7 +1509,7 @@
 			</p>
 			<p>
 				<span>
-					<span>He by Gu-drun, fair lady,</span>
+					<span>He by Gudrun, fair lady,</span>
 					<span>to seat himself was told;</span>
 				</span>
 				<br/>
@@ -1787,7 +1787,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>The news Gu-drun had told them</span>
+					<span>The news Gudrun had told them</span>
 					<span>others to Wâ-te bore;</span>
 				</span>
 				<br/>
@@ -1824,7 +1824,7 @@
 			</p>
 			<p>
 				<span>
-					<span>Then spake Gu-drun, the high-born:</span>
+					<span>Then spake Gudrun, the high-born:</span>
 					<span>“This I can truly say:</span>
 				</span>
 				<br/>
@@ -2081,7 +2081,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Gu-drun went forth to meet her,</span>
+					<span>Gudrun went forth to meet her,</span>
 					<span>and gave her greeting kind;</span>
 				</span>
 				<br/>
@@ -2139,7 +2139,7 @@
 			</p>
 			<p>
 				<span>
-					<span>The fair Gu-drun then kissed her</span>
+					<span>The fair Gudrun then kissed her</span>
 					<span>and those who with her came.</span>
 				</span>
 				<br/>
