--- a/src/epub/text/tale-31.xhtml
+++ b/src/epub/text/tale-31.xhtml
@@ -292,7 +292,7 @@
 			</p>
 			<p>
 				<span>
-					<span>Gu-drun, the lovely maiden,</span>
+					<span>Gudrun, the lovely maiden,</span>
 					<span>a friendly will e’er bore</span>
 				</span>
 				<br/>
@@ -313,7 +313,7 @@
 			</p>
 			<p>
 				<span>
-					<span>Gu-drun then bade her steward</span>
+					<span>Gudrun then bade her steward</span>
 					<span>a hoard of goods to take</span>
 				</span>
 				<br/>
@@ -450,7 +450,7 @@
 				<br/>
 				<span>
 					<span>His peace to gain forever;</span>
-					<span>to this Gu-drun had brought him.</span>
+					<span>to this Gudrun had brought him.</span>
 				</span>
 				<br/>
 				<span>
@@ -465,7 +465,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>With her, Gu-drun and Hildeburg</span>
+					<span>With her, Gudrun and Hildeburg</span>
 					<span>went, with kind goodwill,</span>
 				</span>
 				<br/>
