--- a/src/epub/text/tale-32.xhtml
+++ b/src/epub/text/tale-32.xhtml
@@ -15,7 +15,7 @@
 					</h2>
 					<p epub:type="title">How They All Went to Their Homes</p>
 				</hgroup>
-				<p epub:type="bridgehead">Siegfried, king of Moorland, goes home, taking his bride, Herwic’s sister. Herwic returns to his home with Gu-drun, after she has bidden farewell to her mother, Hilda, and to her brother, Ortwin, and Ortrun, his wife.</p>
+				<p epub:type="bridgehead">Siegfried, king of Moorland, goes home, taking his bride, Herwic’s sister. Herwic returns to his home with Gudrun, after she has bidden farewell to her mother, Hilda, and to her brother, Ortwin, and Ortrun, his wife.</p>
 			</header>
 			<p>
 				<span>
@@ -61,7 +61,7 @@
 			</p>
 			<p>
 				<span>
-					<span>Gu-drun then spake to her mother:</span>
+					<span>Gudrun then spake to her mother:</span>
 					<span>“May blessings on you be!</span>
 				</span>
 				<br/>
@@ -103,7 +103,7 @@
 			</p>
 			<p>
 				<span>
-					<span>Then said Gu-drun, the high-born:</span>
+					<span>Then said Gudrun, the high-born:</span>
 					<span>“Mother, it shall be done.”</span>
 				</span>
 				<br/>
@@ -161,7 +161,7 @@
 				<br/>
 				<span>
 					<span>Should Ortrun be unhappy,</span>
-					<span>Gu-drun would then be sad and heavy-hearted.</span>
+					<span>Gudrun would then be sad and heavy-hearted.</span>
 				</span>
 			</p>
 			<p>
@@ -171,7 +171,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>To fair Gu-drun, the queenly,</span>
+					<span>To fair Gudrun, the queenly,</span>
 					<span>that she had granted leave</span>
 				</span>
 				<br/>
@@ -181,7 +181,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>“Gu-drun, may God reward you!</span>
+					<span>“Gudrun, may God reward you!</span>
 					<span>my cares are gone, I ne’er shall know another.”</span>
 				</span>
 			</p>
