--- a/src/epub/text/tale-5.xhtml
+++ b/src/epub/text/tale-5.xhtml
@@ -2784,7 +2784,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Good-will the king will show you,</span>
+					<span>Goodwill the king will show you,</span>
 					<span>and soon his faith to you will he be plighting.”</span>
 				</span>
 			</p>
