--- a/src/epub/text/tale-6.xhtml
+++ b/src/epub/text/tale-6.xhtml
@@ -219,7 +219,7 @@
 				<br/>
 				<span>
 					<span>Wholly forgot his singing,</span>
-					<span>and in the court-yard lighted;</span>
+					<span>and in the courtyard lighted;</span>
 				</span>
 				<br/>
 				<span>
@@ -465,7 +465,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>That such good-will and kindness,</span>
+					<span>That such goodwill and kindness,</span>
 					<span>at court, had been his meed.</span>
 				</span>
 				<br/>
@@ -581,7 +581,7 @@
 				<br/>
 				<span>
 					<span>And said: “I give it gladly;</span>
-					<span>be this of my good-will to you the bearer.”</span>
+					<span>be this of my goodwill to you the bearer.”</span>
 				</span>
 			</p>
 			<p>
@@ -639,7 +639,7 @@
 				<br/>
 				<span>
 					<span>For love of thee, most truly,</span>
-					<span>good-will I bear him ever.”</span>
+					<span>goodwill I bear him ever.”</span>
 				</span>
 				<br/>
 				<span>
