--- a/src/epub/text/tale-7.xhtml
+++ b/src/epub/text/tale-7.xhtml
@@ -140,7 +140,7 @@
 				<br/>
 				<span>
 					<span>The men, in the ship long hidden,</span>
-					<span>up-sprang and sorrow made for Hagen on the water.</span>
+					<span>upsprang and sorrow made for Hagen on the water.</span>
 				</span>
 			</p>
 			<p>
@@ -313,7 +313,7 @@
 			</p>
 			<p>
 				<span>
-					<span>On the gravelly sea-shore standing,</span>
+					<span>On the gravelly seashore standing,</span>
 					<span>no other way he knew</span>
 				</span>
 				<br/>
