--- a/src/epub/text/tale-8.xhtml
+++ b/src/epub/text/tale-8.xhtml
@@ -245,7 +245,7 @@
 				<br/>
 				<span>
 					<span>Friends as well as foemen</span>
-					<span>soon towards the self-same spot were faring.</span>
+					<span>soon towards the selfsame spot were faring.</span>
 				</span>
 			</p>
 			<p>
