--- a/src/epub/text/tale-9.xhtml
+++ b/src/epub/text/tale-9.xhtml
@@ -15,7 +15,7 @@
 					</h2>
 					<p epub:type="title">How Gudrun Was Sought by Siegfried</p>
 				</hgroup>
-				<p epub:type="bridgehead">Wâ-te, Horant, and the other vassals of Hettel go back to their homes. Hilda bears to Hettel a son, Ortwin, and a daughter, Gu-drun, who is afterwards sought by Siegfried, king of Moorland. He is rejected by her father, Hettel, and retires in anger.</p>
+				<p epub:type="bridgehead">Wâ-te, Horant, and the other vassals of Hettel go back to their homes. Hilda bears to Hettel a son, Ortwin, and a daughter, Gudrun, who is afterwards sought by Siegfried, king of Moorland. He is rejected by her father, Hettel, and retires in anger.</p>
 			</header>
 			<p>
 				<span>
@@ -276,7 +276,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Was called Gu-drun the lovely:</span>
+					<span>Was called Gudrun the lovely:</span>
 					<span>from the land of the Hegeling</span>
 				</span>
 				<br/>
@@ -307,7 +307,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Gu-drun her kinsfolk called her,</span>
+					<span>Gudrun her kinsfolk called her,</span>
 					<span>in the Danish land where now she had her dwelling.</span>
 				</span>
 			</p>
@@ -339,7 +339,7 @@
 				</span>
 				<br/>
 				<span>
-					<span>Yet was Gu-drun more lovely,</span>
+					<span>Yet was Gudrun more lovely,</span>
 					<span>and fair beyond belief;</span>
 				</span>
 				<br/>
@@ -350,7 +350,7 @@
 				<br/>
 				<span>
 					<span>Above all other women</span>
-					<span>Gu-drun was praised, ere yet the maid was married.</span>
+					<span>Gudrun was praised, ere yet the maid was married.</span>
 				</span>
 			</p>
 			<p>
