--- a/src/epub/text/introduction-1.xhtml
+++ b/src/epub/text/introduction-1.xhtml
@@ -10,73 +10,73 @@
 			<h2 epub:type="title">Names of Persons</h2>
 			<ul>
 				<li>
-					<p>Ger⁠—an early king of Ireland, grandfather of Hagen.</p>
+					<p><dfn>Ger</dfn>⁠—an early king of Ireland, grandfather of Hagen.</p>
 				</li>
 				<li>
-					<p>U-te⁠—wife of Ger.</p>
+					<p><dfn>U-te</dfn>⁠—wife of Ger.</p>
 				</li>
 				<li>
-					<p>Sigeband⁠—son of Ger and U-te.</p>
+					<p><dfn>Sigeband</dfn>⁠—son of Ger and U-te.</p>
 				</li>
 				<li>
-					<p>U-te⁠—a Norwegian princess, wife of Sigeband.</p>
+					<p><dfn>U-te</dfn>⁠—a Norwegian princess, wife of Sigeband.</p>
 				</li>
 				<li>
-					<p>Hagen⁠—son of Sigeband and the second U-te, and grandfather of Gudrun.</p>
+					<p><dfn>Hagen</dfn>⁠—son of Sigeband and the second U-te, and grandfather of Gudrun.</p>
 				</li>
 				<li>
-					<p>Hilda⁠—a princess of India, wife of Hagen.</p>
+					<p><dfn>Hilda</dfn>⁠—a princess of India, wife of Hagen.</p>
 				</li>
 				<li>
-					<p>Hilda⁠—daughter of Hagen, wife of Hettel.</p>
+					<p><dfn>Hilda</dfn>⁠—daughter of Hagen, wife of Hettel.</p>
 				</li>
 				<li>
-					<p>Hettel⁠—king of the Hegelings, husband of Hilda, and father of Gudrun and Ortwin.</p>
+					<p><dfn>Hettel</dfn>⁠—king of the Hegelings, husband of Hilda, and father of Gudrun and Ortwin.</p>
 				</li>
 				<li>
-					<p>Gudrun⁠—daughter of Hettel and Hilda.</p>
+					<p><dfn>Gudrun</dfn>⁠—daughter of Hettel and Hilda.</p>
 				</li>
 				<li>
-					<p>Ortwin⁠—prince of Ortland, son of Hettel and Hilda.</p>
+					<p><dfn>Ortwin</dfn>⁠—prince of Ortland, son of Hettel and Hilda.</p>
 				</li>
 				<li>
-					<p>Wâ-te⁠—vassal of Hettel.</p>
+					<p><dfn>Wâ-te</dfn>⁠—vassal of Hettel.</p>
 				</li>
 				<li>
-					<p>Fru-te⁠—vassal of Hettel.</p>
+					<p><dfn>Fru-te</dfn>⁠—vassal of Hettel.</p>
 				</li>
 				<li>
-					<p>Horant⁠—vassal of Hettel.</p>
+					<p><dfn>Horant</dfn>⁠—vassal of Hettel.</p>
 				</li>
 				<li>
-					<p>Morunc⁠—vassal of Hettel.</p>
+					<p><dfn>Morunc</dfn>⁠—vassal of Hettel.</p>
 				</li>
 				<li>
-					<p>Irold⁠—vassal of Hettel.</p>
+					<p><dfn>Irold</dfn>⁠—vassal of Hettel.</p>
 				</li>
 				<li>
-					<p>Ludwig⁠—king of Normandy.</p>
+					<p><dfn>Ludwig</dfn>⁠—king of Normandy.</p>
 				</li>
 				<li>
-					<p>Gerlind⁠—wife of Ludwig.</p>
+					<p><dfn>Gerlind</dfn>⁠—wife of Ludwig.</p>
 				</li>
 				<li>
-					<p>Hartmut⁠—son of Ludwig and Gerlind, a suitor for Gudrun.</p>
+					<p><dfn>Hartmut</dfn>⁠—son of Ludwig and Gerlind, a suitor for Gudrun.</p>
 				</li>
 				<li>
-					<p>Ortrun⁠—daughter of Ludwig and Gerlind.</p>
+					<p><dfn>Ortrun</dfn>⁠—daughter of Ludwig and Gerlind.</p>
 				</li>
 				<li>
-					<p>Siegfried⁠—king of Moorland, a suitor for Gudrun.</p>
+					<p><dfn>Siegfried</dfn>⁠—king of Moorland, a suitor for Gudrun.</p>
 				</li>
 				<li>
-					<p>Herwic⁠—king of Sealand, betrothed to Gudrun.</p>
+					<p><dfn>Herwic</dfn>⁠—king of Sealand, betrothed to Gudrun.</p>
 				</li>
 				<li>
-					<p>Hildeburg⁠—maiden companion of Gudrun.</p>
+					<p><dfn>Hildeburg</dfn>⁠—maiden companion of Gudrun.</p>
 				</li>
 				<li>
-					<p>Hergart⁠—maiden companion of Gudrun.</p>
+					<p><dfn>Hergart</dfn>⁠—maiden companion of Gudrun.</p>
 				</li>
 			</ul>
 		</section>
