--- a/src/epub/text/introduction-2.xhtml
+++ b/src/epub/text/introduction-2.xhtml
@@ -10,106 +10,106 @@
 			<h2 epub:type="title">Names of Places</h2>
 			<ul>
 				<li>
-					<p>Abakie⁠—an imaginary Eastern land, subject to Siegfried.</p>
+					<p><dfn>Abakie</dfn>⁠—an imaginary Eastern land, subject to Siegfried.</p>
 				</li>
 				<li>
-					<p>Abalie⁠—an Eastern land, noted for gems and cloths.</p>
+					<p><dfn>Abalie</dfn>⁠—an Eastern land, noted for gems and cloths.</p>
 				</li>
 				<li>
-					<p>Alzabie⁠—a fabulous Moorland city, the residence of Siegfried.</p>
+					<p><dfn>Alzabie</dfn>⁠—a fabulous Moorland city, the residence of Siegfried.</p>
 				</li>
 				<li>
-					<p>Amile⁠—an imaginary Eastern land, the home of mermaids.</p>
+					<p><dfn>Amile</dfn>⁠—an imaginary Eastern land, the home of mermaids.</p>
 				</li>
 				<li>
-					<p>Araby⁠—a land whence came fine clothes and treasures.</p>
+					<p><dfn>Araby</dfn>⁠—a land whence came fine clothes and treasures.</p>
 				</li>
 				<li>
-					<p>Ballian⁠—Ballyghan, Hagen’s chief city in Ireland.</p>
+					<p><dfn>Ballian</dfn>⁠—Ballyghan, Hagen’s chief city in Ireland.</p>
 				</li>
 				<li>
-					<p>Daneland⁠—not the present Denmark, but, in the ninth century, the seat of the Danes in Friesland, near the mouth of the Scheldt.</p>
+					<p><dfn>Daneland</dfn>⁠—not the present Denmark, but, in the ninth century, the seat of the Danes in Friesland, near the mouth of the Scheldt.</p>
 				</li>
 				<li>
-					<p>Dietmarsch⁠—a province subject to Hettel.</p>
+					<p><dfn>Dietmarsch</dfn>⁠—a province subject to Hettel.</p>
 				</li>
 				<li>
-					<p>Friesland⁠—subject to Hettel, and held in fief by Morunc and Irold.</p>
+					<p><dfn>Friesland</dfn>⁠—subject to Hettel, and held in fief by Morunc and Irold.</p>
 				</li>
 				<li>
-					<p>Galeis⁠—a land whose people are friendly to Herwic.</p>
+					<p><dfn>Galeis</dfn>⁠—a land whose people are friendly to Herwic.</p>
 				</li>
 				<li>
-					<p>Galicia⁠—Portugal, the home of Hildeburg.</p>
+					<p><dfn>Galicia</dfn>⁠—Portugal, the home of Hildeburg.</p>
 				</li>
 				<li>
-					<p>Garadie⁠—an indeterminate country, near Ireland.</p>
+					<p><dfn>Garadie</dfn>⁠—an indeterminate country, near Ireland.</p>
 				</li>
 				<li>
-					<p>Givers⁠—a fabulous land, subject to Horant.</p>
+					<p><dfn>Givers</dfn>⁠—a fabulous land, subject to Horant.</p>
 				</li>
 				<li>
-					<p>Gulstred⁠—a place in the West.</p>
+					<p><dfn>Gulstred</dfn>⁠—a place in the West.</p>
 				</li>
 				<li>
-					<p>Hegeling⁠—the name of a people on the North Sea, in Holland, governed by Hettel.</p>
+					<p><dfn>Hegeling</dfn>⁠—the name of a people on the North Sea, in Holland, governed by Hettel.</p>
 				</li>
 				<li>
-					<p>Holstein⁠—variously mentioned as subject to Fru-te, to Irolt, and to Ortwin.</p>
+					<p><dfn>Holstein</dfn>⁠—variously mentioned as subject to Fru-te, to Irolt, and to Ortwin.</p>
 				</li>
 				<li>
-					<p>Icaria⁠—a fabulous land whose people are allies of Siegfried of Moorland.</p>
+					<p><dfn>Icaria</dfn>⁠—a fabulous land whose people are allies of Siegfried of Moorland.</p>
 				</li>
 				<li>
-					<p>Ireland⁠—The situation seems sometimes to correspond with the modern Ireland, and sometimes to a part of Holland. There is a place in Texel, at the present day, named Eijerland.</p>
+					<p><dfn>Ireland</dfn>⁠—The situation seems sometimes to correspond with the modern Ireland, and sometimes to a part of Holland. There is a place in Texel, at the present day, named Eijerland.</p>
 				</li>
 				<li>
-					<p>Iserland⁠—the home of one of Gudrun’s maiden companions.</p>
+					<p><dfn>Iserland</dfn>⁠—the home of one of Gudrun’s maiden companions.</p>
 				</li>
 				<li>
-					<p>Kampalia⁠—a fabulous land noted for rich clothing.</p>
+					<p><dfn>Kampalia</dfn>⁠—a fabulous land noted for rich clothing.</p>
 				</li>
 				<li>
-					<p>Kampatille⁠—Hettel’s castle, also called Matelan.</p>
+					<p><dfn>Kampatille</dfn>⁠—Hettel’s castle, also called Matelan.</p>
 				</li>
 				<li>
-					<p>Karadie⁠—a land belonging to Siegfried of Moorland.</p>
+					<p><dfn>Karadie</dfn>⁠—a land belonging to Siegfried of Moorland.</p>
 				</li>
 				<li>
-					<p>Kassian⁠—the chief city and castle of Normandy.</p>
+					<p><dfn>Kassian</dfn>⁠—the chief city and castle of Normandy.</p>
 				</li>
 				<li>
-					<p>Matelan⁠—see Kampatille.</p>
+					<p><dfn>Matelan</dfn>⁠—see Kampatille.</p>
 				</li>
 				<li>
-					<p>Moorland⁠—the kingdom of Siegfried; owing to the love of the marvelous in antiquity, regarded by the poet as the land of the Moors, but probably a low country near the North Sea.</p>
+					<p><dfn>Moorland</dfn>⁠—the kingdom of Siegfried; owing to the love of the marvelous in antiquity, regarded by the poet as the land of the Moors, but probably a low country near the North Sea.</p>
 				</li>
 				<li>
-					<p>Nifland⁠—“the land of fogs,” on the lower Rhine, the home of the Nibelungen.</p>
+					<p><dfn>Nifland</dfn>⁠—“the land of fogs,” on the lower Rhine, the home of the Nibelungen.</p>
 				</li>
 				<li>
-					<p>Normandy or Ormanie⁠—may be the country now known as Normandy, or is perhaps a region near the mouth of the Scheldt, where the name Ormans-kapelle occurs in an ancient map.</p>
+					<p><dfn>Normandy</dfn> or <dfn>Ormanie</dfn>⁠—may be the country now known as Normandy, or is perhaps a region near the mouth of the Scheldt, where the name Ormans-kapelle occurs in an ancient map.</p>
 				</li>
 				<li>
-					<p>Ortland⁠—probably Jutland, under the rule of Ortwin.</p>
+					<p><dfn>Ortland</dfn>⁠—probably Jutland, under the rule of Ortwin.</p>
 				</li>
 				<li>
-					<p>Salme⁠—a fabulous country.</p>
+					<p><dfn>Salme</dfn>⁠—a fabulous country.</p>
 				</li>
 				<li>
-					<p>Sealand⁠—Herwic’s kingdom, not the Danish Zealand, but probably the sea-lands of Friesland.</p>
+					<p><dfn>Sealand</dfn>⁠—Herwic’s kingdom, not the Danish Zealand, but probably the sea-lands of Friesland.</p>
 				</li>
 				<li>
-					<p>Scotland⁠—spoken of as belonging to Norway.</p>
+					<p><dfn>Scotland</dfn>⁠—spoken of as belonging to Norway.</p>
 				</li>
 				<li>
-					<p>Sturmland⁠—subject to Wâ-te, adjoining Herwic’s kingdom.</p>
+					<p><dfn>Sturmland</dfn>⁠—subject to Wâ-te, adjoining Herwic’s kingdom.</p>
 				</li>
 				<li>
-					<p>Waleis⁠—the western limit of Hettel’s kingdom, by some supposed to be Wales, but generally thought to be the country near the mouth of the river Waal in Holland.</p>
+					<p><dfn>Waleis</dfn>⁠—the western limit of Hettel’s kingdom, by some supposed to be Wales, but generally thought to be the country near the mouth of the river Waal in Holland.</p>
 				</li>
 				<li>
-					<p>Wulpensand⁠—an island at the mouth of the Scheldt.</p>
+					<p><dfn>Wulpensand</dfn>⁠—an island at the mouth of the Scheldt.</p>
 				</li>
 			</ul>
 		</section>
